Prevent non-ideal state text from bleeding horizontally in IE.
Fixes #1193.

--- a/packages/core/src/components/non-ideal-state/_non-ideal-state.scss
+++ b/packages/core/src/components/non-ideal-state/_non-ideal-state.scss
@@ -51,4 +51,5 @@ Styleguide pt-non-ideal-state
 .pt-non-ideal-state-title,
 .pt-non-ideal-state-description {
   text-align: center;
+  max-width: 100%; // for Internet Explorer (https://github.com/palantir/blueprint/issues/1193)
 }
